add About component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
-@import 'variables/colors', 'variables/fonts', 'sections/header',
-  'sections/hero', 'sections/footer';
+@import "variables/colors", "variables/fonts", "sections/header",
+  "sections/hero", "sections/about", "sections/footer";
 * {
   margin: 0;
   padding: 0;
@@ -47,19 +47,19 @@
   }
 }
 .description {
-  font-size: 1.4em;
+  font-size: 1.1em;
   text-align: left;
   font-weight: 400;
   @media (max-width: 998px) {
-    font-size: 1em;
+    font-size: 0.7em;
     text-align: center;
   }
 }
 .btn-link {
   text-decoration: none !important;
-  padding: 16px 25px;
+  padding: 13px 20px;
   border: none;
-  border-radius: 15px;
+  text-align: left !important;
   font-size: 20px;
   font-weight: 600;
   background-color: $primaryColor;
