--- a/src/styles/sections/_about.scss
+++ b/src/styles/sections/_about.scss
@@ -1,4 +1,5 @@
-.hero {
+.about {
+  background-color: #f5f5f5;
   padding: 50px 100px !important;
   @media (max-width: 998px) {
     padding: 30px 50px !important;
