--- a/src/styles/sections/_header.scss
+++ b/src/styles/sections/_header.scss
@@ -1,14 +1,22 @@
 .header {
   background-color: #fff;
   box-shadow: 0px -30px 15px 29px rgba(0, 0, 0, 0.15) !important;
-  padding: 0 100px !important;
-  @media (max-width: 998px) {
-    padding: 0 !important;
+  .navbar-collapse {
+    flex-grow: 0 !important;
   }
   &__logo {
+    cursor: pointer;
     font-size: 40px;
+    font-weight: 600;
     @media (max-width: 998px) {
       font-size: 30px;
+    }
+  }
+  &__toggle {
+    font-size: 30px;
+    border: none !important;
+    &:focus {
+      box-shadow: none !important;
     }
   }
   &__nav {
@@ -18,7 +26,7 @@
     .nav-link {
       font-size: 16px !important;
       color: $primaryColor !important;
-      font-weight: 400;
+      font-weight: 500;
       &:hover {
         color: $secondaryColor !important;
       }
