add skills sections

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
 @import "variables/colors", "variables/fonts", "sections/header",
-  "sections/hero", "sections/about", "sections/footer";
+  "sections/hero", "sections/about", "sections/skills", "sections/footer";
 * {
   margin: 0;
   padding: 0;
