--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,6 @@
 @import "variables/colors", "variables/fonts", "sections/header",
-  "sections/hero", "sections/about", "sections/skills", "sections/footer";
+  "sections/hero", "sections/about", "sections/skills", "sections/contact",
+  "sections/footer";
 * {
   margin: 0;
   padding: 0;
@@ -25,11 +26,11 @@ a {
 .primary-color {
   color: $primaryColor !important;
 }
-.secondary-color {
-  color: $secondaryColor !important;
-}
 .text-color {
   color: $textColor !important;
+}
+.secondary-color {
+  color: $secondaryColor !important;
 }
 .white-color {
   color: $whiteColor !important;
@@ -65,7 +66,6 @@ a {
   text-decoration: none !important;
   padding: 13px 20px;
   border: none;
-  text-align: left !important;
   font-size: 20px;
   font-weight: 600;
   background-color: $primaryColor;
@@ -76,7 +76,8 @@ a {
     transition: all 0.3s ease-in-out;
   }
   @media (max-width: 998px) {
-    width: 100%;
+    width: 100% !important;
+    text-align: center !important;
   }
 }
 .iconSize {
