feat: add project section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 @import "variables/colors", "variables/fonts", "sections/header",
-  "sections/hero", "sections/about", "sections/skills", "sections/contact",
-  "sections/footer";
+  "sections/hero", "sections/about", "sections/skills", "sections/projects",
+  "sections/contact", "sections/footer";
 * {
   margin: 0;
   padding: 0;
