--- a/src/styles/sections/_projects.scss
+++ b/src/styles/sections/_projects.scss
@@ -1,4 +1,6 @@
 .projects {
+  position: relative;
+  top: 150px;
   background-color: $primaryColor;
   color: $whiteColor;
   padding: 50px 100px !important;
