--- a/src/styles/sections/_about.scss
+++ b/src/styles/sections/_about.scss
@@ -1,4 +1,6 @@
 .about {
+  position: relative;
+  top: 150px;
   background-color: #f5f5f5;
   padding: 50px 100px !important;
   @media (max-width: 998px) {
