--- a/src/styles/sections/_skills.scss
+++ b/src/styles/sections/_skills.scss
@@ -1,4 +1,6 @@
 .skills {
+  position: relative;
+  top: 150px;
   padding: 50px 100px !important;
   @media (max-width: 998px) {
     padding: 30px 50px !important;
